# LIDAR_ground_segmentation

./: CMakeLists.txt  README.md  package.xml
src/: ground_segmentation.cpp  ground_segmentation.h  ground_segmentation_main.cpp
